--- a/src/app/componentes/inicio/inicio.component.css
+++ b/src/app/componentes/inicio/inicio.component.css
@@ -1,7 +1,6 @@
 .tarjeta {
-    max-width: 300px;
-    display:inline-block;
-    margin: 10px 30px;
+    /* max-width: 300px; */
+    /* width: 100%; */
 
     animation-name: sombra-out;
     animation-duration: 200ms;
@@ -26,7 +25,6 @@
     to {
         box-shadow: 0px 3px 15px 0px black;
         background-color: palegoldenrod;
-        padding: 25px;
     }
 }
 
@@ -34,7 +32,6 @@
     from {
         box-shadow: 0px 3px 15px 1px black;
         background-color: palegoldenrod;
-        padding: 25px;
      }
     to {
         box-shadow: 0px 1px 2px 0px rgba(0,0,0,0.75);
@@ -54,6 +51,6 @@
     background-size: cover;
 }
 
-.centrar{
+/* .centrar{
     text-align: center;
-}
+} */
