Se agregó validación del lado del cliente a los formularios

--- a/src/app/componentes/contratista-detalle/contratista-detalle.component.html
+++ b/src/app/componentes/contratista-detalle/contratista-detalle.component.html
@@ -77,7 +77,7 @@
     <!-- TRABAJOS -->
     <app-cargando *ngIf="!trabajos"></app-cargando>
     <mat-accordion *ngIf="trabajos">
-        <mat-expansion-panel expanded>
+        <mat-expansion-panel>
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     Trabajos
@@ -153,7 +153,7 @@
     <!-- PAGOS -->
     <app-cargando *ngIf="!pagos"></app-cargando>
     <mat-accordion *ngIf="pagos">
-        <mat-expansion-panel expanded>
+        <mat-expansion-panel>
             <mat-expansion-panel-header>
                 <mat-panel-title>
                     Pagos
