--- a/src/app/componentes/contratista-editar/contratista-editar.component.html
+++ b/src/app/componentes/contratista-editar/contratista-editar.component.html
@@ -1,26 +1,71 @@
 <h3>{{esCrear ? 'Nuevo' : 'Editar'}} contratista</h3>
+<div *ngIf="contratista" class="formulario" [formGroup]="formulario">
+
+  <mat-form-field class="formulario-item">
+    <input matInput placeholder="Nombre" formControlName="nombre" required>
+    <mat-hint align="end">{{nombre.value?.length || 0}}/50</mat-hint>
+    <mat-error *ngIf="nombre.errors?.required">Campo obligatorio</mat-error>
+    <mat-error *ngIf="nombre.errors?.maxlength">El texto ingresado es demasiado largo</mat-error>
+  </mat-form-field>
+
+  <mat-form-field class="formulario-item">
+    <input matInput placeholder="Apellido" formControlName="apellido">
+    <mat-hint align="end">{{apellido.value?.length || 0}}/50</mat-hint>
+    <mat-error *ngIf="apellido.errors?.maxlength">El texto ingresado es demasiado largo</mat-error>
+  </mat-form-field>
+
+  <mat-form-field class="formulario-item">
+    <input matInput placeholder="Teléfono" formControlName="telefono">
+    <mat-hint align="end">{{telefono.value?.length || 0}}/50</mat-hint>
+    <mat-error *ngIf="telefono.errors?.maxlength">El texto ingresado es demasiado largo</mat-error>
+  </mat-form-field>
+
+  <mat-form-field class="formulario-item">
+    <input matInput placeholder="Domicilio" formControlName="domicilio">
+    <mat-hint align="end">{{domicilio.value?.length || 0}}/100</mat-hint>
+    <mat-error *ngIf="domicilio.errors?.maxlength">El texto ingresado es demasiado largo</mat-error>
+  </mat-form-field>
+
+  <mat-form-field class="formulario-item">
+    <textarea matInput placeholder="Observaciones" formControlName="observaciones"></textarea>
+  </mat-form-field>
+
+  <div class="botones-confirmar">
+    <button mat-raised-button color="primary" class="boton" (click)="aceptar($event)">Aceptar</button>
+    <button mat-raised-button color="primary" class="boton" (click)="cancelar($event)">Cancelar</button>
+  </div>
+</div>
+
+<!-- <br>
+<br>
+<br>
+
 <div *ngIf="contratista" class="formulario">
   <div>
     <mat-form-field class="formulario-item">
-      <input matInput placeholder="Nombre" [(ngModel)]="contratista.Nombre">
+      <input matInput placeholder="Nombre" #nombre [(ngModel)]="contratista.Nombre" required>
+      <mat-hint align="end">{{nombre.value?.length || 0}}/50</mat-hint>
     </mat-form-field>
   </div>
 
   <div>
     <mat-form-field class="formulario-item">
-      <input matInput placeholder="Apellido" [(ngModel)]="contratista.Apellido">
+      <input matInput placeholder="Apellido" #apellido [(ngModel)]="contratista.Apellido">
+      <mat-hint align="end">{{apellido.value?.length || 0}}/50</mat-hint>
     </mat-form-field>
   </div>
 
   <div>
     <mat-form-field class="formulario-item">
-      <input matInput placeholder="Teléfono" [(ngModel)]="contratista.Telefono">
+      <input matInput placeholder="Teléfono" #telefono [(ngModel)]="contratista.Telefono">
+      <mat-hint align="end">{{telefono.value?.length || 0}}/50</mat-hint>
     </mat-form-field>
   </div>
 
   <div>
     <mat-form-field class="formulario-item">
-      <input matInput placeholder="Domicilio" [(ngModel)]="contratista.Domicilio">
+      <input matInput placeholder="Domicilio" #domicilio [(ngModel)]="contratista.Domicilio">
+      <mat-hint align="end">{{domicilio.value?.length || 0}}/100</mat-hint>
     </mat-form-field>
   </div>
 
@@ -35,4 +80,4 @@
     <button mat-raised-button color="primary" class="boton" (click)="aceptar($event)">Aceptar</button>
     <button mat-raised-button color="primary" class="boton" (click)="cancelar($event)">Cancelar</button>
   </div>
-</div>
+</div> -->
