--- a/src/app/componentes/sesion/sesion.component.html
+++ b/src/app/componentes/sesion/sesion.component.html
@@ -20,8 +20,8 @@
 </div>
 <div *ngIf="usuario">
     <br>
-    <h3>Cerrar sesión de {{usuario.Nombre}}</h3>
+    <h3>Sesión de {{usuario.Nombre}}</h3>
     <button mat-raised-button color="warn" (click)="cerrarSesion($event)">
-        Aceptar
+        Cerrar sesión
     </button>
 </div>
