--- a/src/app/componentes/material-editar/material-editar.component.html
+++ b/src/app/componentes/material-editar/material-editar.component.html
@@ -1,4 +1,32 @@
-<div *ngIf="material" class="formulario">
+<h3>{{esCrear ? 'Nuevo' : 'Editar'}} material</h3>
+<div *ngIf="material" class="formulario" [formGroup]="formulario">
+
+  <mat-form-field class="formulario-item">
+    <input matInput placeholder="Nombre" formControlName="nombre" required>
+    <mat-hint align="end">{{nombre.value?.length || 0}}/50</mat-hint>
+    <mat-error *ngIf="nombre.errors?.required">Campo obligatorio</mat-error>
+    <mat-error *ngIf="nombre.errors?.maxlength">El texto ingresado es demasiado largo</mat-error>
+  </mat-form-field>
+
+  <mat-form-field class="formulario-item">
+    <textarea matInput placeholder="Observaciones" formControlName="observaciones"></textarea>
+  </mat-form-field>
+
+  <mat-form-field class="formulario-item">
+    <input matInput placeholder="Precio" (focus)="seleccionarContenido($event)" (mouseup)="$event.preventDefault()" type="number" formControlName="precio">
+    <span matPrefix>$&nbsp;</span>
+  </mat-form-field>
+
+  <mat-checkbox formControlName="estaAdquirido">Adquirido</mat-checkbox>
+
+  <div class="botones-confirmar">
+    <button mat-raised-button color="primary" class="boton" (click)="aceptar($event)">Aceptar</button>
+    <button mat-raised-button color="primary" class="boton" (click)="cancelar($event)">Cancelar</button>
+  </div>
+    
+</div>
+
+<!-- <div *ngIf="material" class="formulario">
   <div>
     <mat-form-field class="formulario-item">
       <input matInput placeholder="Nombre" [(ngModel)]="material.Nombre">
@@ -8,21 +36,23 @@
   <div>
     <mat-form-field class="formulario-item">
       <textarea matInput placeholder="Observaciones" rows="1" [(ngModel)]="material.Observaciones"></textarea>
-    </mat-form-field>
-  </div>
-
-  <div>
-    <mat-form-field class="formulario-item">
-      <input matInput placeholder="Precio" type="number" [(ngModel)]="material.Precio">
-    </mat-form-field>
-  </div>
-
-  <div>
-    <mat-checkbox [(ngModel)]="material.EstaAdquirido">Adquirido</mat-checkbox>
-  </div>
-
-  <div class="botones-confirmar">
-    <button mat-raised-button color="primary" class="boton" (click)="aceptar($event)">Aceptar</button>
-    <button mat-raised-button color="primary" class="boton" (click)="cancelar($event)">Cancelar</button>
-  </div>
+  </mat-form-field>
 </div>
+
+<div>
+  <mat-form-field class="formulario-item">
+    <input matInput placeholder="Precio" (focus)="seleccionarContenido($event)" (mouseup)="$event.preventDefault()"
+      type="number" [(ngModel)]="material.Precio">
+    <span matPrefix>$&nbsp;</span>
+  </mat-form-field>
+</div>
+
+<div>
+  <mat-checkbox [(ngModel)]="material.EstaAdquirido">Adquirido</mat-checkbox>
+</div>
+
+<div class="botones-confirmar">
+  <button mat-raised-button color="primary" class="boton" (click)="aceptar($event)">Aceptar</button>
+  <button mat-raised-button color="primary" class="boton" (click)="cancelar($event)">Cancelar</button>
+</div>
+</div> -->
