--- a/src/app/componentes/pagos/pagos.component.html
+++ b/src/app/componentes/pagos/pagos.component.html
@@ -22,6 +22,11 @@
       </td>
     </ng-container>
 
+    <ng-container matColumnDef="contratista">
+      <th mat-header-cell *matHeaderCellDef> Contratista </th>
+      <td mat-cell *matCellDef="let pago"> {{pago.NombreContratista}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="fecha">
       <th mat-header-cell *matHeaderCellDef> Fecha </th>
       <td mat-cell *matCellDef="let pago">
@@ -35,13 +40,13 @@
       <td mat-cell *matCellDef="let pago"> {{pago.Observaciones}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="estado">
+    <!-- <ng-container matColumnDef="estado">
       <th mat-header-cell *matHeaderCellDef> Estado </th>
       <td mat-cell *matCellDef="let pago">
         <span *ngIf="pago.EstaAnulado" class="badge badge-danger">Anulado</span>
         <span *ngIf="!pago.EstaAnulado" class="badge badge-success">Ratificado</span>
       </td>
-    </ng-container>
+    </ng-container> -->
 
     <ng-container matColumnDef="monto">
       <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Monto </th>
