--- a/src/app/componentes/trabajo-detalle/trabajo-detalle.component.html
+++ b/src/app/componentes/trabajo-detalle/trabajo-detalle.component.html
@@ -14,19 +14,37 @@
     <mat-toolbar>{{trabajo.Nombre}}</mat-toolbar>
     <!-- <div class="h3">{{trabajo.Nombre}}</div> -->
     <div class="detalle-ficha">
-        <div class="row detalle-ficha-item">
-            <b class="col-sm-2">Descripción:</b>
-            <div class="col-sm-10">
-                {{trabajo.Descripcion}}
-            </div>
-        </div>
-        <hr>
+
         <div class="row">
             <div class="col-sm-6">
-                
-                <div class="row detalle-ficha-item">             
-                    <b class="col-sm-4">Estado:</b>
-                    <div class="col-sm-8">
+                <div class="row detalle-ficha-item">
+                    <b class="col-sm-5">Descripción:</b>
+                    <div class="col-sm-7">
+                        {{trabajo.Descripcion}}
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="row detalle-ficha-item">
+                    <b class="col-sm-5">Precio por
+                        <span *ngIf="trabajo.Contrato.Id<3">trabajo</span>
+                        <span *ngIf="trabajo.Contrato.Id>2">día</span>:
+                    </b>
+                    <div class="col-sm-7">
+                        {{trabajo.Precio | currency }}
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <hr>
+
+        <div class="row">
+            <div class="col-sm-6">
+
+                <div class="row detalle-ficha-item">
+                    <b class="col-sm-5">Estado:</b>
+                    <div class="col-sm-7">
                         <div class="badge" [class.badge-dark]="trabajo.Estado.Id===1" [class.badge-primary]="trabajo.Estado.Id===2"
                             [class.badge-success]="trabajo.Estado.Id===3" [class.badge-warning]="trabajo.Estado.Id===4"
                             [class.badge-danger]="trabajo.Estado.Id===5">
@@ -36,26 +54,23 @@
                 </div>
 
                 <div class="row detalle-ficha-item">
-                    <b class="col-sm-4">Contratista:</b>
-                    <div class="col-sm-8">
+                    <b class="col-sm-5">Contratista:</b>
+                    <div class="col-sm-7">
                         {{trabajo.Contratista.Nombre}} {{trabajo.Contratista.Apellido}}
                     </div>
                 </div>
 
                 <div class="row detalle-ficha-item">
-                    <b class="col-sm-4">Contrato:</b>
-                    <div class="col-sm-8">
+                    <b class="col-sm-5">Contrato:</b>
+                    <div class="col-sm-7">
                         {{trabajo.Contrato.Nombre}}
                     </div>
                 </div>
 
                 <div class="row detalle-ficha-item">
-                    <b class="col-sm-4">Precio por
-                        <span *ngIf="trabajo.Contrato.Id<3">trabajo</span>
-                        <span *ngIf="trabajo.Contrato.Id>2">día</span>:
-                    </b>
-                    <div class="col-sm-8">
-                        {{trabajo.Precio | currency }}
+                    <b class="col-sm-5">Ayudantes:</b>
+                    <div class="col-sm-7">
+                        {{trabajo.Ayudantes}}
                     </div>
                 </div>
 
@@ -63,31 +78,31 @@
 
             <div class="col-sm-6">
 
-                <div class="row detalle-ficha-item" *ngIf="tareas">
-                    <b class="col-sm-4">Tareas:</b>
-                    <div class="col-sm-8">
-                        {{calcularTareasRealizadas()}} de {{tareas.length}}
-                    </div>
-                    <mat-progress-bar mode="determinate" value="{{ tareas.length==0 ? 0 : calcularTareasRealizadas() * 100 / tareas.length}}"></mat-progress-bar>
-                </div>
-
-                <div class="row detalle-ficha-item" *ngIf="materiales">
-                    <b class="col-sm-4">Materiales:</b>
-                    <div class="col-sm-8">
-                        {{calcularMaterialesAdquiridos()}} de {{materiales.length}}
-                    </div>
-                    <mat-progress-bar mode="determinate" value="{{ materiales.length==0 ? 0 : calcularMaterialesAdquiridos() * 100 / materiales.length}}"></mat-progress-bar>
-                </div>
-
                 <div class="row detalle-ficha-item" *ngIf="pagos">
-                    <b class="col-sm-4">Pagos:</b>
-                    <div class="col-sm-8">
+                    <b class="col-sm-5">Pagos:</b>
+                    <div class="col-sm-7">
                         {{sumarPagosTotal() | currency}}
                     </div>
                     <mat-progress-bar mode="determinate" value="{{ pagos.length==0 ? 0 : sumarPagosTotal() * 100 / trabajo.Precio }}"></mat-progress-bar>
                     <span class="badge badge-warning" *ngIf="sumarPagosTotal() > trabajo.Precio">
                         ¡Los pagos superan el precio pactado!
                     </span>
+                </div>
+
+                <div class="row detalle-ficha-item" *ngIf="tareas">
+                    <b class="col-sm-5">Tareas realizadas:</b>
+                    <div class="col-sm-7">
+                        {{calcularTareasRealizadas()}} de {{tareas.length}}
+                    </div>
+                    <mat-progress-bar mode="determinate" value="{{ tareas.length==0 ? 0 : calcularTareasRealizadas() * 100 / tareas.length}}"></mat-progress-bar>
+                </div>
+
+                <div class="row detalle-ficha-item" *ngIf="materiales">
+                    <b class="col-sm-5">Materiales adquiridos:</b>
+                    <div class="col-sm-7">
+                        {{calcularMaterialesAdquiridos()}} de {{materiales.length}}
+                    </div>
+                    <mat-progress-bar mode="determinate" value="{{ materiales.length==0 ? 0 : calcularMaterialesAdquiridos() * 100 / materiales.length}}"></mat-progress-bar>
                 </div>
 
             </div>
@@ -98,165 +113,10 @@
 
 <br>
 
-<!-- TAREAS -->
-<app-cargando *ngIf="!tareas"></app-cargando>
-<mat-accordion *ngIf="tareas">
-    <mat-expansion-panel expanded>
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Tareas
-            </mat-panel-title>
-            <mat-panel-description>
-                Total: {{tareas.length}}
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-
-        <div>
-            <button mat-raised-button color="warn" (click)="crearTarea($event)">
-                Nueva tarea
-            </button>
-        </div>
-        <div class="texto-pequeno" *ngIf="tareas.length==0">
-            No hay tareas registradas
-        </div>
-        <table mat-table [dataSource]="tareas" class="ancho-completo" *ngIf="tareas.length>0">
-
-            <ng-container matColumnDef="editar">
-                <th mat-header-cell *matHeaderCellDef> </th>
-                <td mat-cell *matCellDef="let tarea" class="tabla-columna-boton">
-                    <button class="tabla-boton" mat-stroked-button color="primary" (click)="editarTarea(tarea.Id)">
-                        Editar
-                    </button>
-                </td>
-            </ng-container>
-
-            <ng-container matColumnDef="eliminar">
-                <th mat-header-cell *matHeaderCellDef> </th>
-                <td mat-cell *matCellDef="let tarea" class="tabla-columna-boton">
-                    <button class="tabla-boton" mat-stroked-button (click)="eliminarTarea(tarea)">
-                        Eliminar
-                    </button>
-                </td>
-            </ng-container>
-
-            <ng-container matColumnDef="nombre">
-                <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                <td mat-cell *matCellDef="let tarea"> <b>{{tarea.Nombre}}</b> </td>
-            </ng-container>
-
-            <ng-container matColumnDef="observaciones">
-                <th mat-header-cell *matHeaderCellDef> Observaciones </th>
-                <td mat-cell *matCellDef="let tarea"> {{tarea.Observaciones}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="estado">
-                <th mat-header-cell *matHeaderCellDef> Estado </th>
-                <td mat-cell *matCellDef="let tarea">
-                    <span *ngIf="!tarea.EstaRealizada" class="badge badge-danger">Pendiente</span>
-                    <span *ngIf="tarea.EstaRealizada" class="badge badge-success">Realizada</span>
-                </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="columnasDeTablaTareas"></tr>
-            <tr mat-row *matRowDef="let row; columns: columnasDeTablaTareas;"></tr>
-        </table>
-
-    </mat-expansion-panel>
-</mat-accordion>
-
-<br>
-
-<!-- MATERIALES -->
-<app-cargando *ngIf="!materiales"></app-cargando>
-<mat-accordion *ngIf="materiales">
-    <mat-expansion-panel expanded>
-        <mat-expansion-panel-header>
-            <mat-panel-title>
-                Materiales
-            </mat-panel-title>
-            <mat-panel-description>
-                Total: {{materiales.length}}
-            </mat-panel-description>
-        </mat-expansion-panel-header>
-
-        <div>
-            <button mat-raised-button color="warn" (click)="crearMaterial($event)">
-                Nuevo material
-            </button>
-        </div>
-        <div class="texto-pequeno" *ngIf="materiales.length==0">
-            No hay materiales registrados
-        </div>
-        <table mat-table [dataSource]="materiales" class="ancho-completo" *ngIf="materiales.length>0">
-
-            <ng-container matColumnDef="editar">
-                <th mat-header-cell *matHeaderCellDef> </th>
-                <td mat-cell *matCellDef="let material" class="tabla-columna-boton">
-                    <button class="tabla-boton" mat-stroked-button color="primary" (click)="editarMaterial(material.Id)">
-                        Editar
-                    </button>
-                </td>
-            </ng-container>
-
-            <ng-container matColumnDef="eliminar">
-                <th mat-header-cell *matHeaderCellDef> </th>
-                <td mat-cell *matCellDef="let material" class="tabla-columna-boton">
-                    <button class="tabla-boton" mat-stroked-button (click)="eliminarMaterial(material)">
-                        Eliminar
-                    </button>
-                </td>
-            </ng-container>
-
-            <ng-container matColumnDef="nombre">
-                <th mat-header-cell *matHeaderCellDef> Nombre </th>
-                <td mat-cell *matCellDef="let material"> <b>{{material.Nombre}}</b> </td>
-            </ng-container>
-
-            <ng-container matColumnDef="observaciones">
-                <th mat-header-cell *matHeaderCellDef> Observaciones </th>
-                <td mat-cell *matCellDef="let material"> {{material.Observaciones}} </td>
-            </ng-container>
-
-            <ng-container matColumnDef="estado">
-                <th mat-header-cell *matHeaderCellDef> Estado </th>
-                <td mat-cell *matCellDef="let material">
-                    <span *ngIf="!material.EstaAdquirido" class="badge badge-danger">Faltante</span>
-                    <span *ngIf="material.EstaAdquirido" class="badge badge-success">Adquirido</span>
-                    <!-- <mat-checkbox></mat-checkbox> -->
-                </td>
-            </ng-container>
-
-            <ng-container matColumnDef="precio">
-                <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio </th>
-                <td mat-cell *matCellDef="let material" class="tabla-columna-precio"> {{material.Precio |
-                    currency}} </td>
-            </ng-container>
-
-            <tr mat-header-row *matHeaderRowDef="columnasDeTablaMateriales"></tr>
-            <tr mat-row *matRowDef="let row; columns: columnasDeTablaMateriales;"></tr>
-        </table>
-
-        <div class="precios-totales" *ngIf="materiales.length>0">
-            <div>
-                <span class="texto-pequeno">Faltante:</span> {{sumarMaterialesFaltantes() | currency}}
-            </div>
-            <div>
-                <span class="texto-pequeno">Comprado:</span> {{sumarMaterialesComprados() | currency}}
-            </div>
-            <div>
-                <span class="texto-pequeno">TOTAL:</span> {{sumarMaterialesTotal() | currency}}
-            </div>
-        </div>
-
-    </mat-expansion-panel>
-</mat-accordion>
-
-<br>
-
 <!-- PAGOS -->
 <app-cargando *ngIf="!pagos"></app-cargando>
 <mat-accordion *ngIf="pagos">
-    <mat-expansion-panel expanded>
+    <mat-expansion-panel>
         <mat-expansion-panel-header>
             <mat-panel-title>
                 Pagos
@@ -333,6 +193,162 @@
             </div> -->
             <div>
                 <span class="texto-pequeno">TOTAL:</span> {{sumarPagosTotal() | currency}}
+            </div>
+        </div>
+
+    </mat-expansion-panel>
+</mat-accordion>
+
+<br>
+
+<!-- TAREAS -->
+<app-cargando *ngIf="!tareas"></app-cargando>
+<mat-accordion *ngIf="tareas">
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Tareas
+            </mat-panel-title>
+            <mat-panel-description>
+                Total: {{tareas.length}}
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+
+        <div>
+            <button mat-raised-button color="warn" (click)="crearTarea($event)">
+                Nueva tarea
+            </button>
+        </div>
+        <div class="texto-pequeno" *ngIf="tareas.length==0">
+            No hay tareas registradas
+        </div>
+        <table mat-table [dataSource]="tareas" class="ancho-completo" *ngIf="tareas.length>0">
+
+            <ng-container matColumnDef="editar">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let tarea" class="tabla-columna-boton">
+                    <button class="tabla-boton" mat-stroked-button color="primary" (click)="editarTarea(tarea.Id)">
+                        Editar
+                    </button>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="eliminar">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let tarea" class="tabla-columna-boton">
+                    <button class="tabla-boton" mat-stroked-button (click)="eliminarTarea(tarea)">
+                        Eliminar
+                    </button>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                <td mat-cell *matCellDef="let tarea"> <b>{{tarea.Nombre}}</b> </td>
+            </ng-container>
+
+            <ng-container matColumnDef="observaciones">
+                <th mat-header-cell *matHeaderCellDef> Observaciones </th>
+                <td mat-cell *matCellDef="let tarea"> {{tarea.Observaciones}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef> Estado </th>
+                <td mat-cell *matCellDef="let tarea">
+                    <span *ngIf="!tarea.EstaRealizada" class="badge badge-danger">Pendiente</span>
+                    <span *ngIf="tarea.EstaRealizada" class="badge badge-success">Realizada</span>
+                </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="columnasDeTablaTareas"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnasDeTablaTareas;"></tr>
+        </table>
+
+    </mat-expansion-panel>
+</mat-accordion>
+
+<br>
+
+<!-- MATERIALES -->
+<app-cargando *ngIf="!materiales"></app-cargando>
+<mat-accordion *ngIf="materiales">
+    <mat-expansion-panel>
+        <mat-expansion-panel-header>
+            <mat-panel-title>
+                Materiales
+            </mat-panel-title>
+            <mat-panel-description>
+                Total: {{materiales.length}}
+            </mat-panel-description>
+        </mat-expansion-panel-header>
+
+        <div>
+            <button mat-raised-button color="warn" (click)="crearMaterial($event)">
+                Nuevo material
+            </button>
+        </div>
+        <div class="texto-pequeno" *ngIf="materiales.length==0">
+            No hay materiales registrados
+        </div>
+        <table mat-table [dataSource]="materiales" class="ancho-completo" *ngIf="materiales.length>0">
+
+            <ng-container matColumnDef="editar">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let material" class="tabla-columna-boton">
+                    <button class="tabla-boton" mat-stroked-button color="primary" (click)="editarMaterial(material.Id)">
+                        Editar
+                    </button>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="eliminar">
+                <th mat-header-cell *matHeaderCellDef> </th>
+                <td mat-cell *matCellDef="let material" class="tabla-columna-boton">
+                    <button class="tabla-boton" mat-stroked-button (click)="eliminarMaterial(material)">
+                        Eliminar
+                    </button>
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="nombre">
+                <th mat-header-cell *matHeaderCellDef> Nombre </th>
+                <td mat-cell *matCellDef="let material"> <b>{{material.Nombre}}</b> </td>
+            </ng-container>
+
+            <ng-container matColumnDef="observaciones">
+                <th mat-header-cell *matHeaderCellDef> Observaciones </th>
+                <td mat-cell *matCellDef="let material"> {{material.Observaciones}} </td>
+            </ng-container>
+
+            <ng-container matColumnDef="estado">
+                <th mat-header-cell *matHeaderCellDef> Estado </th>
+                <td mat-cell *matCellDef="let material">
+                    <span *ngIf="!material.EstaAdquirido" class="badge badge-danger">Faltante</span>
+                    <span *ngIf="material.EstaAdquirido" class="badge badge-success">Adquirido</span>
+                    <!-- <mat-checkbox></mat-checkbox> -->
+                </td>
+            </ng-container>
+
+            <ng-container matColumnDef="precio">
+                <th mat-header-cell *matHeaderCellDef class="tabla-columna-precio"> Precio </th>
+                <td mat-cell *matCellDef="let material" class="tabla-columna-precio"> {{material.Precio |
+                    currency}} </td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="columnasDeTablaMateriales"></tr>
+            <tr mat-row *matRowDef="let row; columns: columnasDeTablaMateriales;"></tr>
+        </table>
+
+        <div class="precios-totales" *ngIf="materiales.length>0">
+            <div>
+                <span class="texto-pequeno">Faltante:</span> {{sumarMaterialesFaltantes() | currency}}
+            </div>
+            <div>
+                <span class="texto-pequeno">Adquirido:</span> {{sumarMaterialesComprados() | currency}}
+            </div>
+            <hr>
+            <div>
+                <span class="texto-pequeno">TOTAL:</span> {{sumarMaterialesTotal() | currency}}
             </div>
         </div>
 
