--- a/src/app/componentes/trabajo-editar/trabajo-editar.component.html
+++ b/src/app/componentes/trabajo-editar/trabajo-editar.component.html
@@ -1,4 +1,56 @@
 <h3>{{esCrear ? 'Nuevo' : 'Editar'}} trabajo</h3>
+<div *ngIf="trabajo" class="formulario" [formGroup]="formulario">
+
+  <mat-form-field class="formulario-item">
+    <input matInput placeholder="Nombre" formControlName="nombre" required>
+    <mat-hint align="end">{{nombre.value?.length || 0}}/50</mat-hint>
+    <mat-error *ngIf="nombre.errors?.required">Campo obligatorio</mat-error>
+    <mat-error *ngIf="nombre.errors?.maxlength">El texto ingresado es demasiado largo</mat-error>
+  </mat-form-field>
+
+  <mat-form-field class="formulario-item">
+    <textarea matInput placeholder="Descripción" formControlName="descripcion"></textarea>
+  </mat-form-field>
+
+  <mat-form-field class="formulario-item">
+    <mat-select placeholder="Estado" formControlName="idEstado" required>
+      <mat-option *ngFor="let item of estados" [value]="item.Id">{{item.Nombre}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <br>
+
+  <mat-form-field class="formulario-item">
+    <mat-select placeholder="Contratista" formControlName="idContratista" required>
+      <mat-option *ngFor="let item of contratistas" [value]="item.Id">{{item.Nombre}} {{item.Apellido}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field class="formulario-item">
+    <input matInput placeholder="Ayudantes de contratista" type="number" formControlName="ayudantes">
+  </mat-form-field>
+
+  <mat-form-field class="formulario-item">
+    <mat-select placeholder="Contrato" formControlName="idContrato" required>
+      <mat-option *ngFor="let item of contratos" [value]="item.Id">{{item.Nombre}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field class="formulario-item">
+    <input matInput placeholder="Precio pactado" (focus)="seleccionarContenido($event)" (mouseup)="$event.preventDefault()"
+      type="number" formControlName="precio">
+    <span matPrefix>$&nbsp;</span>
+  </mat-form-field>
+
+  <div class="botones-confirmar">
+    <button mat-raised-button color="primary" class="boton" (click)="aceptar($event)">Aceptar</button>
+    <button mat-raised-button color="primary" class="boton" (click)="cancelar($event)">Cancelar</button>
+  </div>
+</div>
+
+
+
+<!-- 
 <div *ngIf="trabajo" class="formulario">
   <div>
     <mat-form-field class="formulario-item">
@@ -32,6 +84,12 @@
 
   <div>
     <mat-form-field class="formulario-item">
+      <input matInput placeholder="Ayudantes de contratista" type="number" [(ngModel)]="trabajo.Ayudantes">
+    </mat-form-field>
+  </div>
+
+  <div>
+    <mat-form-field class="formulario-item">
       <mat-select placeholder="Contrato" [(ngModel)]="trabajo.Contrato.Id">
         <mat-option *ngFor="let item of contratos" [value]="item.Id">{{item.Nombre}}</mat-option>
       </mat-select>
@@ -40,7 +98,8 @@
 
   <div>
     <mat-form-field class="formulario-item">
-      <input matInput placeholder="Precio pactado" type="number" [(ngModel)]="trabajo.Precio">
+      <input matInput placeholder="Precio pactado" (focus)="seleccionarContenido($event)" (mouseup)="$event.preventDefault()" type="number" [(ngModel)]="trabajo.Precio">
+      <span matPrefix>$&nbsp;</span>
     </mat-form-field>
   </div>
 
@@ -48,4 +107,4 @@
     <button mat-raised-button color="primary" class="boton" (click)="aceptar($event)">Aceptar</button>
     <button mat-raised-button color="primary" class="boton" (click)="cancelar($event)">Cancelar</button>
   </div>
-</div>
+</div> -->
